--- a/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/templates/resources/forms.properties
+++ b/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/templates/resources/forms.properties
@@ -208,6 +208,7 @@ select.default.year=Select a year
 
 #Error messages
 error.email.invalidValue=The email address specified is not valid
+exercise5.zipcode.invalidValue=The zip code specified is not valid
 payment.card.month.invalid=Value selected for Month field is invalid. Please choose a correct one
 payment.card.year.invalid=Value selected for Year field is invalid. Please choose a correct one
 
