--- a/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/templates/resources/cart.properties
+++ b/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/templates/resources/cart.properties
@@ -71,3 +71,10 @@ error.invalid.tax=An error has occurred calculating taxes for one or more produc
 error.cart.or.checkout.error=Your shopping cart cannot be ordered since one or more of the products\r\n in your cart are not available in the requested quantity. Please check availability for each product.
 error.cart.expired=Your shopping cart has expired.
 error.card.invalid.shipments=Your order cannot be completed because at least one of the addresses for products is invalid.
+
+cart.email.add.item.subject=Confirmation of your order
+cart.email.add.item.header=The following product was added to your cart
+cart.email.add.item.product.name=Product name:
+cart.email.add.item.product.description=Product description:
+cart.email.add.item.product.price=Price:
+cart.email.add.item.product.quantity=Quantity:
